kubernetes/catalog/linkding/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/A75G/docker-templates/master/templates/linkding.xml
# Category: Productivity, Network-Web
# Stars: 59 | Downloads: 8092419
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: linkding
  labels:
    app.kubernetes.io/name: linkding
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: linkding
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linkding
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: linkding
          image: sissbruecker/linkding
          # No environment variables defined
          ports:
            - containerPort: 9090
              protocol: TCP
              name: port
          startupProbe:
            tcpSocket:
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 9090
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 9090
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: linkding-data-0
              mountPath: "/etc/linkding/data"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: linkding-data-0
        persistentVolumeClaim:
          claimName: linkding-data-0
---
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: linkding
  labels:
    app.kubernetes.io/name: linkding
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: linkding
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: port
  type: ClusterIP
